fixed empty white space on right

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,9 @@
 html, body{
 	height: 100%;
 	width: 100%;
+	margin: 0px;
+        padding: 0px;
+        overflow-x: hidden; 
 }
 
 .navbar-default{
@@ -263,5 +266,11 @@ button:hover {
 	background-color: #fff;
 	outline: none;
 	border: none;
+}
+
+@media (min-width: 768px){
+	.navbar-right{
+		margin-right: 0px;
+	}
 }
 
